[gd_scene load_steps=4 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://simmenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://bulksim.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 1027.0
margin_bottom = 601.0
color = Color( 0, 0.415686, 0.384314, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 668.0
margin_bottom = 601.0
color = Color( 0, 0.490196, 0.384314, 1 )

[node name="e" type="ScrollContainer" parent="."]
margin_left = 694.0
margin_top = 25.0
margin_right = 1005.0
margin_bottom = 491.0
scroll_horizontal_enabled = false

[node name="e" type="VBoxContainer" parent="e"]
margin_right = 146.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="e/e"]
margin_right = 146.0
margin_bottom = 14.0
text = "STANDINGS"

[node name="Button2" type="Button" parent="e/e"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
flat = true

[node name="Label2" type="Label" parent="e/e"]
margin_top = 42.0
margin_right = 146.0
margin_bottom = 56.0
text = "Drivers Standings"

[node name="drivers" type="HBoxContainer" parent="e/e"]
margin_top = 60.0
margin_right = 146.0
margin_bottom = 80.0

[node name="Ranks" type="VBoxContainer" parent="e/e/drivers"]
margin_bottom = 20.0

[node name="Names" type="VBoxContainer" parent="e/e/drivers"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="e/e/drivers"]
margin_left = 8.0
margin_right = 20.0
margin_bottom = 20.0
flat = true

[node name="Points" type="VBoxContainer" parent="e/e/drivers"]
margin_left = 24.0
margin_right = 24.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="e/e"]
margin_top = 84.0
margin_right = 146.0
margin_bottom = 104.0
flat = true

[node name="Label3" type="Label" parent="e/e"]
margin_top = 108.0
margin_right = 146.0
margin_bottom = 122.0
text = "Constructors Standings"

[node name="const" type="HBoxContainer" parent="e/e"]
margin_top = 126.0
margin_right = 146.0
margin_bottom = 146.0

[node name="Ranks" type="VBoxContainer" parent="e/e/const"]
margin_bottom = 20.0

[node name="Names" type="VBoxContainer" parent="e/e/const"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="e/e/const"]
margin_left = 8.0
margin_right = 20.0
margin_bottom = 20.0
flat = true

[node name="Points" type="VBoxContainer" parent="e/e/const"]
margin_left = 24.0
margin_right = 24.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="."]
margin_left = 53.0
margin_top = 47.0
margin_right = 324.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 206, 34 )
text = "Simulate Race"

[node name="Button2" type="Button" parent="."]
margin_left = 49.0
margin_top = 123.0
margin_right = 320.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 206, 34 )
text = "Bulk Simulate"

[node name="Button3" type="Button" parent="."]
margin_left = 713.0
margin_top = 518.0
margin_right = 984.0
margin_bottom = 573.0
rect_pivot_offset = Vector2( 206, 34 )
text = "Hall of Fame"

[node name="Button6" type="Button" parent="."]
margin_left = 51.0
margin_top = 194.0
margin_right = 322.0
margin_bottom = 249.0
rect_pivot_offset = Vector2( 206, 34 )
text = "End Season"

[node name="Button4" type="Button" parent="."]
margin_left = 50.0
margin_top = 265.0
margin_right = 321.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 206, 34 )
text = "Reset All Stats and Results"

[node name="Button7" type="Button" parent="."]
margin_left = 54.0
margin_top = 444.0
margin_right = 325.0
margin_bottom = 499.0
rect_pivot_offset = Vector2( 195, 128 )
text = "Export Data to Clipboard"

[node name="Button8" type="Button" parent="."]
margin_left = 360.0
margin_top = 445.0
margin_right = 631.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 195, 128 )
text = "Import Data from Clipboard"

[node name="Button5" type="Button" parent="."]
margin_left = 52.0
margin_top = 521.0
margin_right = 643.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 206, 34 )
text = "Main Menu"

[node name="Label" type="Label" parent="."]
margin_left = 348.0
margin_top = 47.0
margin_right = 414.0
margin_bottom = 68.0
text = "Season 1"

[node name="Label4" type="Label" parent="."]
margin_left = 346.0
margin_top = 560.0
margin_right = 412.0
margin_bottom = 581.0

[node name="Label2" type="Label" parent="."]
margin_left = 576.0
margin_top = 48.0
margin_right = 642.0
margin_bottom = 69.0
text = "Round 1"
align = 2

[node name="Label3" type="Label" parent="."]
margin_left = 350.0
margin_top = 71.0
margin_right = 499.0
margin_bottom = 92.0
text = "Results from Last Race:"

[node name="Result" type="Label" parent="."]
margin_left = 428.0
margin_top = 211.0
margin_right = 577.0
margin_bottom = 232.0
text = "This is the first round!"

[node name="a" type="ScrollContainer" parent="."]
margin_left = 354.0
margin_top = 99.0
margin_right = 643.0
margin_bottom = 423.0
scroll_horizontal_enabled = false

[node name="prevres" type="HBoxContainer" parent="a"]
margin_right = 24.0
margin_bottom = 20.0

[node name="Ranks" type="VBoxContainer" parent="a/prevres"]
margin_bottom = 20.0

[node name="Names" type="VBoxContainer" parent="a/prevres"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="a/prevres"]
margin_left = 8.0
margin_right = 20.0
margin_bottom = 20.0
flat = true

[node name="Points" type="VBoxContainer" parent="a/prevres"]
margin_left = 24.0
margin_right = 24.0
margin_bottom = 20.0

[node name="bulksim" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = -1.0
margin_right = 4.0
margin_bottom = -1.0

[node name="simmenu" parent="." instance=ExtResource( 2 )]
visible = false
rect_pivot_offset = Vector2( -213, -142 )

[node name="closemenu" type="Button" parent="simmenu"]
margin_left = 346.0
margin_top = 133.0
margin_right = 366.0
margin_bottom = 154.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="simmenu/closemenu" to="." method="_on_closemenu_pressed"]
